--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "engines": {
     "node": ">=6.13.0"
   },
-  "scripts": {},
+  "scripts": {
+    "seed": "node seed.js"
+  },
   "dependencies": {
     "faker": "^5.1.0"
   },
