--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "start": "nodemon server/index.js",
     "seed": "node seed.js"
   },
   "dependencies": {
