--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "scripts": {
     "start": "nodemon server/index.js",
+    "react-dev": "webpack -d --watch",
     "seed": "node seed.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.15.0",
     "faker": "^5.1.0",
     "mongoose": "^4.9.6",
@@ -19,6 +21,11 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "webpack": "^2.2.1"
   }
 }
