--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "express": "^4.15.0",
     "faker": "^5.1.0",
     "mongoose": "^4.9.6",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-styled-components": "^1.11.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
